# rails-with-diesel-ffi

./: .env  .gitignore  Dockerfile  Gemfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  rust-build.sh
app/controllers/: csv_controller.rb
app/models/: something.rb  user.rb
app/views/csv/: index.html.erb
app/views/layouts/: application.html.erb
config/: application.rb  cable.yml  credentials.yml.enc  database.yml  routes.rb
config/environments/: production.rb
db/: schema.rb
db/migrate/: 20200124160058_create_somethings.rb
ffi/diesel_ffi/: Cargo.toml
ffi/diesel_ffi/src/: lib.rs  schema.rs
lib/: rust_seed.rb
