[package]
name = "diesel_ffi"
version = "0.1.0"
authors = ["kohaku"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.3", features = ["postgres", "chrono"] }
chrono = "0.4.10"
csv = "1.1"
libc = "0.2"
dotenv = "0.15"
serde = "1.0.105"
serde_json = "1.0"
rand = "0.8.5"
fake = { version = "2.0", features=['chrono'] }

[lib]
name = "diesel_ffi"
crate-type = ["dylib"]